<?xml version="1.0"?>
<package format="2">
  <name>led_control_pkg</name>
  <version>0.0.1</version>
  <description>GPIO LED control from /yolo/sign_detection</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
